Fix layout issues

--- a/app/components/Home.scss
+++ b/app/components/Home.scss
@@ -1,9 +1,19 @@
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  min-height: 600px;
+}
+
 .homeContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   position: relative;
-  height: 600px;
+  min-height: 600px;
+  height: 100%;
   padding-right: 40px;
 }
 
@@ -39,6 +49,8 @@
 .editor {
   width: 70%;
   min-width: 500px;
+  min-height: 600px;
+  height: 95%;
   z-index: 200;
   display: flex;
   flex-direction: column;
